delete some functions

--- a/Jump/Jump.vcxproj
+++ b/Jump/Jump.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="callback.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="game2.0.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="model.cpp" />
